--- a/config/storage.yml
+++ b/config/storage.yml
@@ -10,7 +10,7 @@ amazon:
   service: S3
   access_key_id: <%= ENV['S3_ACCESS_KEY_ID'] %>
   secret_access_key: <%= ENV['S3_SECRET_ACCESS_KEY'] %>
-  bucket: "airbnb-copycat"
+  bucket: "openseason"
   region: "eu-west-1"
 
 
